--- a/apps/template/src/app/auth/auth-login-three/auth-login-three.component.html
+++ b/apps/template/src/app/auth/auth-login-three/auth-login-three.component.html
@@ -1,5 +1,5 @@
 <div class="back-to-home rounded d-none d-sm-block">
-  <a routerLink="/index" class="btn btn-icon btn-soft-primary">
+  <a routerLink="/index" class="btn btn-icon btn-primary">
     <i-feather name="home" class="icons"></i-feather>
   </a>
 </div>
@@ -16,59 +16,77 @@
             <form class="login-form mt-4">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="form-group position-relative">
-                    <label>Your Email <span class="text-danger">*</span></label>
-                    <i-feather name="user" class="fea icon-sm icons"></i-feather>
-                    <input type="email" class="form-control pl-5" placeholder="Email" name="email" required="">
+                  <div class="mb-3">
+                    <label class="form-label">Your Email <span class="text-danger">*</span></label>
+                    <div class="form-icon position-relative">
+                      <i-feather name="user" class="fea icon-sm icons"></i-feather>
+                      <input type="email" class="form-control ps-5" placeholder="Email" name="email" required="">
+                    </div>
                   </div>
                 </div>
+                <!--end col-->
 
                 <div class="col-lg-12">
-                  <div class="form-group position-relative">
-                    <label>Password <span class="text-danger">*</span></label>
-                    <i-feather name="key" class="fea icon-sm icons"></i-feather>
-                    <input type="password" class="form-control pl-5" placeholder="Password" required="">
+                  <div class="mb-3">
+                    <label class="form-label">Password <span class="text-danger">*</span></label>
+                    <div class="form-icon position-relative">
+                      <i-feather name="key" class="fea icon-sm icons"></i-feather>
+                      <input type="password" class="form-control ps-5" placeholder="Password" required="">
+                    </div>
                   </div>
                 </div>
+                <!--end col-->
 
                 <div class="col-lg-12">
                   <div class="d-flex justify-content-between">
-                    <div class="form-group">
-                      <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="customCheck1">
-                        <label class="custom-control-label" for="customCheck1">Remember me</label>
+                    <div class="mb-3">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">Remember me</label>
                       </div>
                     </div>
-                    <p class="forgot-pass mb-0"><a routerLink="/auth-re-password-three"
-                        class="text-dark font-weight-bold">Forgot password ?</a></p>
+                    <p class="forgot-pass mb-0"><a routerLink="/auth-re-password-three" class="text-dark fw-bold">Forgot
+                        password ?</a></p>
                   </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-lg-12 mb-0">
-                  <button class="btn btn-primary btn-block">Sign in</button>
+                  <div class="d-grid">
+                    <button class="btn btn-primary">Sing in</button>
+                  </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-lg-12 mt-4 text-center">
                   <h6>Or Login With</h6>
-                  <ul class="list-unstyled social-icon mb-0 mt-3">
-                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="facebook" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                    <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="github" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                    <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="twitter" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                    <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="gitlab" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                  </ul>
-                  <!--end icon-->
+                  <div class="row">
+                    <div class="col-6 mt-3">
+                      <div class="d-grid">
+                        <a href="javascript:void(0)" class="btn btn-light"><i class="mdi mdi-facebook text-primary"></i>
+                          Facebook</a>
+                      </div>
+                    </div>
+                    <!--end col-->
+
+                    <div class="col-6 mt-3">
+                      <div class="d-grid">
+                        <a href="javascript:void(0)" class="btn btn-light"><i class="mdi mdi-google text-danger"></i>
+                          Google</a>
+                      </div>
+                    </div>
+                    <!--end col-->
+                  </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-12 text-center">
-                  <p class="mb-0 mt-3"><small class="text-dark mr-2">Don't have an account ?</small> <a
-                      routerLink="/auth-signup-three" class="text-dark font-weight-bold">Sign Up</a></p>
+                  <p class="mb-0 mt-3"><small class="text-dark me-2">Don't have an account ?</small> <a
+                      routerLink="/auth-signup-three" class="text-dark fw-bold">Sign Up</a></p>
                 </div>
+                <!--end col-->
               </div>
+              <!--end row-->
             </form>
           </div>
         </div>
