--- a/apps/template/src/app/auth/auth-signup/auth-signup.component.html
+++ b/apps/template/src/app/auth/auth-signup/auth-signup.component.html
@@ -5,83 +5,110 @@
 </div>
 
 <!-- Hero Start -->
-<section class="bg-home d-flex align-items-center">
+<section class="bg-auth-home d-table w-100">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-7 col-md-6">
-        <div class="mr-lg-5">
+        <div class="me-lg-5">
           <img src="assets/images/user/signup.svg" class="img-fluid d-block mx-auto" alt="">
         </div>
       </div>
       <div class="col-lg-5 col-md-6">
-        <div class="card login_page shadow rounded border-0">
+        <div class="card shadow rounded border-0">
           <div class="card-body">
             <h4 class="card-title text-center">Signup</h4>
             <form class="login-form mt-4">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="form-group position-relative">
-                    <label>First name <span class="text-danger">*</span></label>
-                    <i-feather name="user" class="fea icon-sm icons"></i-feather>
-                    <input type="text" class="form-control pl-5" placeholder="First Name" name="s" required="">
+                  <div class="mb-3">
+                    <label class="form-label">First name <span class="text-danger">*</span></label>
+                    <div class="form-icon position-relative">
+                      <i-feather name="user" class="fea icon-sm icons"></i-feather>
+                      <input type="text" class="form-control ps-5" placeholder="First Name" name="s" required="">
+                    </div>
                   </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-md-6">
-                  <div class="form-group position-relative">
-                    <label>Last name <span class="text-danger">*</span></label>
-                    <i-feather name="user-check" class="fea icon-sm icons"></i-feather>
-                    <input type="text" class="form-control pl-5" placeholder="Last Name" name="s" required="">
+                  <div class="mb-3">
+                    <label class="form-label">Last name <span class="text-danger">*</span></label>
+                    <div class="form-icon position-relative">
+                      <i-feather name="user-check" class="fea icon-sm icons"></i-feather>
+                      <input type="text" class="form-control ps-5" placeholder="Last Name" name="s" required="">
+                    </div>
                   </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-md-12">
-                  <div class="form-group position-relative">
-                    <label>Your Email <span class="text-danger">*</span></label>
-                    <i-feather name="mail" class="fea icon-sm icons"></i-feather>
-                    <input type="email" class="form-control pl-5" placeholder="Email" name="email" required="">
+                  <div class="mb-3">
+                    <label class="form-label">Your Email <span class="text-danger">*</span></label>
+                    <div class="form-icon position-relative">
+                      <i-feather name="mail" class="fea icon-sm icons"></i-feather>
+                      <input type="email" class="form-control ps-5" placeholder="Email" name="email" required="">
+                    </div>
                   </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-md-12">
-                  <div class="form-group position-relative">
-                    <label>Password <span class="text-danger">*</span></label>
-                    <i-feather name="key" class="fea icon-sm icons"></i-feather>
-                    <input type="password" class="form-control pl-5" placeholder="Password" required="">
+                  <div class="mb-3">
+                    <label class="form-label">Password <span class="text-danger">*</span></label>
+                    <div class="form-icon position-relative">
+                      <i-feather name="key" class="fea icon-sm icons"></i-feather>
+                      <input type="password" class="form-control ps-5" placeholder="Password" required="">
+                    </div>
                   </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-md-12">
-                  <div class="form-group">
-                    <div class="custom-control custom-checkbox">
-                      <input type="checkbox" class="custom-control-input" id="customCheck1">
-                      <label class="custom-control-label" for="customCheck1">I Accept <a href="#"
+                  <div class="mb-3">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">I Accept <a routerLink="/auth-signup"
                           class="text-primary">Terms And Condition</a></label>
                     </div>
                   </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-md-12">
-                  <button class="btn btn-primary btn-block">Register</button>
+                  <div class="d-grid">
+                    <button class="btn btn-primary">Register</button>
+                  </div>
                 </div>
+                <!--end col-->
+
                 <div class="col-lg-12 mt-4 text-center">
                   <h6>Or Signup With</h6>
-                  <ul class="list-unstyled social-icon mb-0 mt-3">
-                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="facebook" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                    <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="github" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                    <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="twitter" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                    <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
-                        <i-feather name="gitlab" class="fea icon-sm icons"></i-feather>
-                      </a></li>
-                  </ul>
-                  <!--end icon-->
+                  <div class="row">
+                    <div class="col-6 mt-3">
+                      <div class="d-grid">
+                        <a href="javascript:void(0)" class="btn btn-light"><i class="mdi mdi-facebook text-primary"></i>
+                          Facebook</a>
+                      </div>
+                    </div>
+                    <!--end col-->
+
+                    <div class="col-6 mt-3">
+                      <div class="d-grid">
+                        <a href="javascript:void(0)" class="btn btn-light"><i class="mdi mdi-google text-danger"></i>
+                          Google</a>
+                      </div>
+                    </div>
+                    <!--end col-->
+                  </div>
                 </div>
+                <!--end col-->
+
                 <div class="mx-auto">
-                  <p class="mb-0 mt-3"><small class="text-dark mr-2">Already have an account ?</small> <a
-                      routerLink="/auth-login" class="text-dark font-weight-bold">Sign in</a></p>
+                  <p class="mb-0 mt-3"><small class="text-dark me-2">Already have an account ?</small> <a
+                      routerLink="/auth-login" class="text-dark fw-bold">Sign in</a></p>
                 </div>
               </div>
+              <!--end row-->
             </form>
           </div>
         </div>
